--- a/user_guide.org
+++ b/user_guide.org
@@ -17,25 +17,25 @@ Please note that this is only compatible with Mathcad Prime 3.1 and above.
 [[https://youtu.be/WerhVoz60nI][Tutorial Video]]
 
 * Installation
-1. Go to the releases tab on this github page, find the latest distribution and download it. Download the template files provided to get started.
-2. Double click the *application_v1.exe* file to launch the application.
+1. Go to the releases tab on this github page, find the latest distribution and download it. Download the template files provided to help you get started.
+2. Double click the application executable to launch the application.
 * Use
 Select the excel file from the templates provided containing the equipment and the input data. The excel sheet should have the following key headers:
-|----------------------------+-------------------+----------------+-------------+---------|
-| eqpt_name                  | mounting_location | project_number | eqpt_number | tags    |
-|----------------------------+-------------------+----------------+-------------+---------|
-| Anesthesia machine         | Wall, Floor       |           1111 |        1234 | Medical |
-| Warming Cabinet            | Floor             |           1111 |        1234 | Medical |
-| Surgical Scrub Sink        | Wall              |           1111 |        1234 | Medical | 
-| Retractable Ceiling Column | Ceiling           |           1111 |        1234 | Medical |
-|----------------------------+-------------------+----------------+-------------+---------|
-Note: Tags should be separated by comma. If you decide to include units, put parentheses around the unit and do not include any spaces in the header. There must be two sheets - *values* and *preview_images*. Take a look at *example_sheet.xlsx* for reference.
-1. Select your Mathcad template file for each mounting location. I have provided a single file that works for each location to help you get started. It is located on the same page as the latest distribution.
-2. You can always go back to the file selection screen by clicking *Change Input Files*. You can reload the information from the excel spreadsheet by clicking *Refresh*.
-3. If you want to save details about the report to the database, then click *Save to Database*. See the section ~Database~ for more information.
+|----------------------------+-------------------+----------------+-------------+---------+-----------|
+| eqpt_name                  | mounting_location | project_number | eqpt_number | tags    | eqpt_tags |
+|----------------------------+-------------------+----------------+-------------+---------+-----------|
+| Anesthesia machine         | Wall, Floor       |           1111 |        1234 | Medical | Foo, Bar  |
+| Warming Cabinet            | Floor             |           1111 |        1234 | Medical | Foo       |
+| Surgical Scrub Sink        | Wall              |           1111 |        1234 | Medical | Bar       |
+| Retractable Ceiling Column | Ceiling           |           1111 |        1234 | Medical | Foo, Bar  |
+|----------------------------+-------------------+----------------+-------------+---------+-----------|
+Note: Tags should be separated by comma. If you decide to include units, put parentheses around the unit and do not include any spaces in the header. There must be two sheets - *values* or *Calculations* and *preview_images*. Take a look at the provided excel template for reference.
+1. Select your Mathcad template file for each mounting location. I have provided a single file that works for each location to help you get started. It is located on the same page as the latest distribution. If the template you chose does not work, make sure that it is compatible with your current Mathcad distribution.  
+2. You can always go back to the file selection screen by clicking *File->Change Input Files*. You can reload the information from the excel spreadsheet by clicking *Edit->Revert Inputs*.
+3. If you want to save details about the report to the database, then click *Save to Database* in the Change Input Files window. See the section ~Database~ for more information.
 4. Click the Previous or Next buttons to scroll the equipment listed in your excel file.
-5. Click the "Preview Calculation Outputs" button to preview the output values.
-6. Click the Generate button and provide a file name to generate a report for the equipment. You do not need to provide a filename if you are generating a report for all equipment entries.
+5. Click the *Preview Calculation Outputs* button to preview the output values.
+6. Click the *Generate Report* button and provide a file name to generate a report for the equipment. You do not need to provide a filename if you are generating a report for all equipment entries.
 7. The application is processing your request once you click *Generate Report* or *Generate Report For All*. A confirmation popup will appear when the processing is complete.
 * Database
 1. The "database" is a .csv file containing all the calculations you have performed with the automation software. This helps with organization and future reference.
@@ -46,4 +46,4 @@ Note: Tags should be separated by comma. If you decide to include units, put par
 2. Customizing the App:
    - If you decide to you want to include your own inputs and outputs, make sure to label your inputs *<my_label>_input*. For example, *alpha_input* would work, but *alpha_something* would not.
    - To use your own custom Mathcad template, choose it using the *Change Input Files* button. Ensure the format follows the example Mathcad template provided.
-   - To use your own custom excel file, choose it using the *Change Input Files* button. Your custom file must follow the formatting rules explicitly defined in the example excel document.
+   - To use your own custom excel file, choose it using *File->Change Input Files* or the shortcut *Ctrl-i*. Your custom file must follow the formatting rules explicitly defined in the example excel document.
